# ensemble-2026

./: .gitignore  LICENSE  README.md  main.py  notki.md  pyproject.toml
configs/: config.yaml
configs/model/: fingerprint_mlp.yaml  gnn.yaml  smiles_description.yaml  xgboost.yaml  xgboost_test.yaml
examples/: example_dataset.py  example_model.py  example_training.py
task1/: baseline.py  dataloader.py  model.py  precompute_labels.py  submission.py  submit.py  test.py  todo.md  train.py  utils.py
task1/data/: chebi_classes.obo  chebi_submission_example.parquet  class_description.csv  submission.parquet
task1/datasets/: BERTdataset.py  graph_datamodule.py  graph_dataset.py
task1/models/: FingerprintMLP.py  chemBERTa.py  gnn_model.py  xgboost_predict.py  xgboost_trainer.py
task2/: BP-morning.py  README.md  final_idea.py  pyproject.toml
task2/old-ideas/: baselines.py  better-paper.py  papers-ensemble-weight.py  papers-ensemble.py  papers.py  sandbox.py
task2/predictions/: better-paper-public.jsonl  cooked-morning.jsonl  embed-first-practice.jsonl  embed-first.jsonl  papers-public-subset.jsonl  public-BP-morning.jsonl  public-hf.jsonl  python-practice-best-p_smart-s_full.jsonl  python-public-best.jsonl  (+2 more)
task3/: .gitignore  aaa.ipynb  readme.md  sandbox.ipynb  submission.csv  submission.parquet  submission.py  train.py
task4/: README.md  cooking.py  dataset.py  ecg_io.py  infer.py  make_submission.py  model.py  pipeline.py  requirements.txt  test.py  testing.ipynb  train.py
task4_model/: dataset.py  model.py  submission.py  training.py
utils/: metric.py
(+1 files in other folders)
