[project]
name = "ensemble-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastparquet>=2025.12.0",
    "hydra-core>=1.3.2",
    "numpy<2.0.0",
    "omegaconf>=2.3.0",
    "pronto>=2.7.3",
    "pytorch-lightning>=2.6.1",
    "scikit-fingerprints>=1.18.0",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.3.0",
    "torch>=2.10.0",
    "transformers>=4.57.6",
    "wandb>=0.25.1",
]
